compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_ty_init_mismatched_ty.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "var a : array 1..1 of int := init(1.0)"

---
"a"@(FileId(1), 4..5) [Declared]: array ( range of `int` (Unevaluated(LibraryId(0), BodyId(0)) .. Expr(Unevaluated(LibraryId(0), BodyId(1)), Yes)), ) of int
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 34..37: mismatched types
| note in file FileId(1) for 34..37: this is of type `real`
| note in file FileId(1) for 8..25: array expects type `int`
| info: `real` is not assignable into `int`
