compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_ty_init_not_comp_time.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "var c : int\nvar a : array 1..1 of int := init(c)"

---
"c"@(FileId(1), 4..5) [Declared]: int
"a"@(FileId(1), 16..17) [Declared]: array ( range of `int` (Unevaluated(LibraryId(0), BodyId(0)) .. Expr(Unevaluated(LibraryId(0), BodyId(1)), Yes)), ) of int
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 46..47: cannot compute `c` at compile-time
| error in file FileId(1) for 46..47: `c` is a reference to a variable, not a constant
| note in file FileId(1) for 4..5: `c` declared here
