compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_ty_init_on_flexible.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "var a : flexible array 1..1 of int := init(1)"

---
"a"@(FileId(1), 4..5) [Declared]: flexible array ( range of `int` (Unevaluated(LibraryId(0), BodyId(0)) .. Expr(Unevaluated(LibraryId(0), BodyId(1)), Yes)), ) of int
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 38..45: cannot use `init` here
| error in file FileId(1) for 38..45: `init` initializer cannot be used for `flexible array 1 .. 1 of int`
| note in file FileId(1) for 8..34: `flexible array 1 .. 1 of int` does not support aggregate initialzation
| info: `flexible array`s cannot initialized using `init` since their size is not known at compile-time
