compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_ty_init_on_static.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var a : array 1..1 of int := init(1)"
---
"a"@(FileId(1), 4..5) [ConstVar(Var, No)]: array ( range of `int` (Unevaluated(LibraryId(0), BodyId(0)) .. Expr(Unevaluated(LibraryId(0), BodyId(1)), Yes)), ) of int
"<root>"@(dummy) [Module(No)]: <error>

