compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_ty_init_sized.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "var _ : array 1 .. * of int := init(1, 2, 3)"

---
"_"@(FileId(1), 4..5) [Declared]: array ( range of `int` (Unevaluated(LibraryId(0), BodyId(0)) .. Unsized(3)), ) of int
"<root>"@(dummy) [Declared]: <error>

